version 1.4.7-left align scroll issue fix

--- a/pages/whatWeDo/whatWeDo.module.css
+++ b/pages/whatWeDo/whatWeDo.module.css
@@ -1,7 +1,7 @@
 .section_wwd {
     text-align: center;
     color: black;
-    padding: 12px;
+    /* padding: 12px; */
     font-weight: bold;
     padding-bottom:5px;
     border-style: solid;
